--- a/RiceMill.Ui/Pages/RiceMill/RiceMillListPage.xaml
+++ b/RiceMill.Ui/Pages/RiceMill/RiceMillListPage.xaml
@@ -18,16 +18,15 @@
                CornerRadius="20"
                Margin="5">
 
-            <StackLayout HeightRequest="155" 
-                         Padding="5">
+            <StackLayout Padding="5">
 
                 <Grid FlowDirection="RightToLeft">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
@@ -41,9 +40,8 @@
                            Grid.Row="0" 
                            Grid.Column="0"
                            VerticalOptions="Center" 
-                           ClearButtonVisibility="WhileEditing"
                            FontAttributes="Bold"/>
-                    
+
                     <Entry x:Name="TxtDescription"
                            Placeholder="توضیحات"
                            MaxLength="200"
@@ -52,14 +50,13 @@
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
                            FontAttributes="Bold"/>
-                    
+
                     <Entry x:Name="TxtAddress"
                            Placeholder="آدرس"
                            MaxLength="200"
                            Grid.Row="1"
                            Grid.Column="0"
                            VerticalOptions="Center" 
-                           ClearButtonVisibility="WhileEditing"
                            FontAttributes="Bold"/>
 
                     <Entry x:Name="TxtWage"
@@ -69,7 +66,8 @@
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
-                           FontAttributes="Bold"/>
+                           FontAttributes="Bold"
+                           Keyboard="Numeric"/>
 
                     <Entry x:Name="TxtPostalCode"
                            Placeholder="کد پستی"
@@ -77,17 +75,18 @@
                            Grid.Row="2"
                            Grid.Column="0"
                            VerticalOptions="Center" 
-                           ClearButtonVisibility="WhileEditing"
-                           FontAttributes="Bold"/>
+                           FontAttributes="Bold"
+                           Keyboard="Numeric"/>
 
-                    <Entry x:Name="Txtphone"
+                    <Entry x:Name="TxtPhone"
                            Placeholder="تلفن"
                            MaxLength="11"
                            Grid.Row="2"
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
-                           FontAttributes="Bold"/>
+                           FontAttributes="Bold"
+                           Keyboard="Numeric"/>
 
                     <Picker x:Name="PickerOwner"
                             Grid.Row="3" 
