--- a/RiceMill.Ui/Pages/Village/VillageListPage.xaml
+++ b/RiceMill.Ui/Pages/Village/VillageListPage.xaml
@@ -19,13 +19,12 @@
                CornerRadius="20"
                Margin="5">
 
-            <StackLayout HeightRequest="110" 
-                         Padding="5">
+            <StackLayout Padding="5">
 
                 <Grid FlowDirection="RightToLeft">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
                     <Entry x:Name="TxtTitle"
