--- a/RiceMill.Ui/Pages/Person/PersonListPage.xaml
+++ b/RiceMill.Ui/Pages/Person/PersonListPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RiceMill.Ui.Pages.Person.PersonListPage"
              NavigationPage.HasNavigationBar="False"
+             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
     <Grid>
@@ -41,6 +42,7 @@
                            Grid.Row="0" 
                            Grid.Column="0"
                            VerticalOptions="Center" 
+                           android:Entry.ImeOptions="Next"
                            FontAttributes="Bold"/>
 
                     <Entry x:Name="TxtFamily"
@@ -50,6 +52,7 @@
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
+                           android:Entry.ImeOptions="Next"
                            FontAttributes="Bold"/>
 
                     <Entry x:Name="TxtAddress"
@@ -58,6 +61,7 @@
                            Grid.Row="1"
                            Grid.Column="0"
                            VerticalOptions="Center" 
+                           android:Entry.ImeOptions="Next"
                            FontAttributes="Bold"/>
 
                     <Entry x:Name="TxtFatherName"
@@ -67,25 +71,28 @@
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
+                           android:Entry.ImeOptions="Next"
                            FontAttributes="Bold"/>
 
                     <Entry x:Name="TxtHomeNumber"
-                           Placeholder="کد پستی"
+                           Placeholder="شماره تلفن منزل"
                            MaxLength="11"
                            Grid.Row="2"
                            Grid.Column="0"
                            VerticalOptions="Center" 
                            FontAttributes="Bold"
+                           android:Entry.ImeOptions="Next"
                            Keyboard="Numeric"/>
 
                     <Entry x:Name="TxtPhoneNumber"
-                           Placeholder="تلفن"
+                           Placeholder="شماره تلفن همراه"
                            MaxLength="11"
                            Grid.Row="2"
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
                            FontAttributes="Bold"
+                           android:Entry.ImeOptions="Next"
                            Keyboard="Numeric"/>
 
                     <Picker x:Name="PickerGender"
