--- a/RiceMill.Ui/Pages/Vehicle/VehicleListPage.xaml
+++ b/RiceMill.Ui/Pages/Vehicle/VehicleListPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RiceMill.Ui.Pages.Vehicle.VehicleListPage"
              NavigationPage.HasNavigationBar="False"
+             xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
     <Grid>
@@ -40,6 +41,7 @@
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
+                           android:Entry.ImeOptions="Next"
                            FontAttributes="Bold"/>
 
                     <Picker x:Name="PickerType"
